# qtdeclarative-feedstock

./: README.md  abs.yaml
recipe/: bld.bat  conda_build_config.yaml  meta.yaml
recipe/test/: CMakeLists.txt  test_qtdeclarative.cpp
